--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ layout: default
   {% include background.html %}
   {% include skills.html %}
   {% include experience.html %}
+  {% include volunteer.html %}
   {% include other-projects.html %}
   {% include footer.html %}
   {% include top-button.html %}
